--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.swiper {
+  width: 500px;
+  /* height: 900px; */
+  object-fit: cover;
+  /* height: 500px; */
+  padding-bottom: 70px;
+}
+
+.swiper-slide {
+  /* text-align: center; */
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.swiper-slide img {
+  display: block;
+  max-width: 500px;
+  height: 300px;
+  object-fit: cover;
+  padding-bottom: 50px;
+  border-radius: 0;
+}
+
+.swiper-pagination-bullet {
+  width: 50px;
+  height: 80px;
+  /* height: 20px; */
+  /* text-align: center; */
+  /* line-height: 20px; */
+  /* font-size: 12px; */
+  /* color: #000; */
+  opacity: 1;
+  background-color: transparent;
+  /* background: rgba(0, 0, 0, 0.2); */
+}
+
+.swiper-pagination-bullet-active {
+  /* color: #fff;
+  background: #007aff; */
+  border: 2px solid red;
+  /* border-radius: 0cm; */
+  /* padding: 10px; */
+  /* width: px; */
+  border: 0;
+  background-color: transparent;
+}
